# google-python-adk-samples

./: .gitignore  main.py  pyproject.toml
agent_tool/: pyproject.toml
agent_tool/src/agent_tool/: __init__.py  agent.py
api/: pyproject.toml
api/src/api/: main.py
blog_pipeline/: pyproject.toml
blog_pipeline/src/blog_pipeline/: __init__.py  agent.py
chuck_norris_agent/: pyproject.toml
chuck_norris_agent/src/chuck_norris_agent/: __init__.py  agent.py
docs/: blog_creation_pipeline分析.md  finish_reason.md  sequential-agent-data-flow.md  工具描述标准.md
hello_agent/: agent.py
utils/: pyproject.toml
utils/src/utils/: runner.py
web/: README.md  index.html  package.json
web/src/: App.tsx  index.css
web/src/components/Chat/: ChatInput.tsx  ChatMessage.tsx  ToolCallCard.tsx  index.ts
web/src/components/Layout/: MainLayout.tsx
web/src/components/Session/: SessionList.tsx
web/src/pages/: Home.tsx
web/src/services/: api.ts
web/src/store/: chatStore.ts
web/src/types/: index.ts
