[project]
name = "google-python-adk-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

]

# 只保留工作区配置
[tool.uv.workspace]
members = [
    "api",
    "utils",
    "agent_tool",
    "chuck_norris_agent",
    "blog_pipeline"
]

[tool.uv.sources]
api = { workspace = true }
utils = { workspace = true }
agent-tool = { workspace = true }
chuck-norris-agent = { workspace = true }
blog-pipeline = { workspace = true }

# 可选：添加开发依赖
[tool.uv]
managed = true
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.9.1",
]

[tool.hatch.build.targets.wheel]
packages = ["google_python_adk_samples"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"